--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="Corpus-text">
-    <h1 class="display-4">Academia Corpus</h1>
 
+<div class="Corpus-text">
+    <div class="bg-logo">
+        <a href="https://www.instagram.com/academiacorpusfranca/">
+            <img src="~/imagens/Logo.png">
+        </a>
+    </div>
+    @* <h1 class="display-4">Academia Corpus</h1>*@
 </div>
+
