--- a/AcademiaCorpus/Views/Home/Planos.cshtml
+++ b/AcademiaCorpus/Views/Home/Planos.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Planos";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Aqui serão colocados os planos de pagamento</p>
+<div class="planos">
+    <h1>@ViewData["Title"]</h1>
+
+    <p>Aqui serão colocados os planos de pagamento</p>
+</div>
+<div class="bg-image_2">
+    <img src="~/imagens/Modelo-Home.jpg">
+</div>
