--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent  box-shadow mb-3">
             <div class="container-fluid">
                 @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AcademiaCorpus</a>*@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -23,7 +23,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">Planos</a>
+                            <a class=" nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">Planos</a>
                         </li>
                     </ul>
                 </div>
@@ -31,17 +31,21 @@
         </nav>
     </header>
 
-    @* <div class="bg-image">
-    <img src="~/imagens/Modelo-Home2.jpg">
+    <div class="traco">
+        <h2>___________________________________________________________________</h2>
     </div>
-    *@
+
+    <div class="bg-image">
+        <img src="~/imagens/Modelo-Home2.jpg">
+    </div>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class=" footer text-muted">
         <div class="container">
             &copy; 2022 - AcademiaCorpus - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
