--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -1,14 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@*{
+    viewdata["title"] = "home page";
 }
 
 
-<div class="Corpus-text">
+<div class="corpus-text">
     <div class="bg-logo">
         <a href="https://www.instagram.com/academiacorpusfranca/">
-            <img src="~/imagens/Logo.png">
+            <img src="~/imagens/logo.png">
         </a>
     </div>
-    @* <h1 class="display-4">Academia Corpus</h1>*@
+    <h1 class="display-4">academia corpus</h1>
 </div>
 
+*@
