--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -17,13 +17,21 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a href="#" class="d-inline-block align-top nav-link"><img src="~/imagens/Logo.png" width="150" /></a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">Planos</a>
+                            <a class=" nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">PLANOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class=" nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">AGENDE SEU HORÁRIO </a>
                         </li>
                     </ul>
                 </div>
@@ -31,9 +39,7 @@
         </nav>
     </header>
 
-    <div class="traco">
-        <h2>___________________________________________________________________</h2>
-    </div>
+
 
     <div class="bg-image">
         <img src="~/imagens/Modelo-Home2.jpg">
