acrecentando link WhatsApp

--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm fixed-top  navbar-light bg-black  box-shadow mb-3">
             <div class="container-fluid mb-3">
                 <div class="bg-logo flex-column">
-                    <a href="https://www.instagram.com/academiacorpusfranca/" class="d-inline-block align-top col-1"><img src="~/imagens/Logo.png" /></a>
+                    <a href="https://www.instagram.com/academiacorpusfranca/" class="d-inline-block align-top col-1" target="_blank"><img src="~/imagens/Logo.png" /></a>
                 </div>
                 @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AcademiaCorpus</a>*@
                 <button class="navbar-toggler"
@@ -60,4 +60,9 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+<div class="whats">
+    <a href="https://wa.me/5516991844434" target="_blank">
+        <img src="~/imagens/WhatsApp.png" width="100" alt="Fale Conosco pelo WhatsApp" title="Fale Conosco pelo WhatsApp" />
+    </a>
+</div>
 </html>
