--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -1,53 +1,40 @@
-﻿{
-    viewdata["title"] = "home page";
+﻿@{
+    ViewData["Title"] = "Home Page";
 }
-
 
 <div class="bg-image">
     <img src="~/imagens/Dumbbells.jpg">
 </div>
 
-
-
-
 <div class="container">
-
     <div class="local">
         <h1 class=" franca display-1"><strong>Franca</strong></h1>
     </div>
-
     <div class="d-inline-block">
         <div class="endereco ">
             <h5>
                 AvenidaAv. Rio Amazonas, 1174 <br />
                 Residencial Amazonas <br />
                 Franca, SP - 14406-010
-
             </h5>
         </div>
         <br />
-
         <div class="ver-mapa  ">
-            <strong><a style="color:black;" href="https://www.google.com/search?q=rua+rio+amazonas+1174&oq=rua+rio+amazonas+1174&aqs=chrome..69i57j33i160l3.6713j0j7&sourceid=chrome&ie=UTF-8">VER NO MAPA</a></strong>
+            <strong><a style="color:black;" href="https://www.google.com/search?q=rua+rio+amazonas+1174&oq=rua+rio+amazonas+1174&aqs=chrome..69i57j33i160l3.6713j0j7&sourceid=chrome&ie=UTF-8" target="_blank">VER NO MAPA</a></strong>
         </div>
-
-
         <div class="dias-abertos">
             <div class="horario-funcionamento">
                 <h4><strong>Horário de funcionamento</strong></h4>
-
                 <div class="horarios">
                     <div class="dias-da-semana">
                         <div class="dias-da-semana-itens">
                             <p> Seg a Sex</p>
                         </div>
-
                         <div class="dias-da-semana-itens">
                             <p> 6h as 11h - 16h as 21h</p>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
