--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         aria-controls="navbarSupportedContent"
                         aria-expanded="false"
                         aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon bg-light"></span>
+                    <span class="navbar-toggler-icon "></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
@@ -41,8 +41,6 @@
             </div>
         </nav>
     </header>
-
-
 
     <div class="container">
         <main role="main" class="pb-3">
