criando tabela de planos

--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
 
     <div class="float-sm-end float-md-end col-sm-1 col-md-6 clearfix">
         <div class="diferenciais ">
-            <h4><span> Diferenciais  </span></h4>
+            <h4><span> Diferencial  </span></h4> <hr width="50%" align="center" color="#ef8f22">
         </div>
         @*ícones ---------------------------------------------------*@
         <div class="clearfix">
