--- a/AcademiaCorpus/Views/Home/Planos.cshtml
+++ b/AcademiaCorpus/Views/Home/Planos.cshtml
@@ -4,10 +4,100 @@
 
 <div class="planos">
     <h1>@ViewData["Title"]</h1>
-
-    <p>Aqui serão colocados os planos de pagamento</p>
 </div>
 
-<div class="bg-image_2">
+
+<div class="acelerar-resultados">
+    <h2>Quer acelerar os resultados?</h2>
+</div>
+
+@*<div class="bg-image_2">
     <img src="~/imagens/Modelo-Home.jpg">
+</div>*@
+
+<div class="planos-cards">
+    <div class=" planos-box float-sm-start col-sm-2 col-md-4">
+        <div class="card-box">
+            <div class="cards">
+                <h1>Mensal</h1>
+                <h6 class="passe-livre">
+                    Passe livre, treine quantas vezes quizer
+                    durante o horário de funcionamento
+                </h6>
+                <hr />
+                <div class="new-home-preco">
+                    <sub class="symbol">R$</sub>
+                    <span class="whole">109</span>
+                    <div class="container-sup">
+                        <sup class="fraction">,90</sup>
+                        <span class="period">/mês</span>
+                    </div>
+                </div>
+                <h6>
+                    Matricula R$30,00
+                </h6>
+                <hr />
+                <a class="new-home-v4-btn new-home-v4-btn--thin new-home-v4-btn--yellow"
+                   href="https://wa.me/5516991844434"
+                   target="_blank" title="Assine agora">Chame agora</a>
+            </div>
+        </div>
+    </div>
+
+    <div class=" planos-box float-sm-start col-sm-2 col-md-4">
+        <div class="cards">
+            <h1>Semestral</h1>
+            <h6 class="passe-livre">
+                Passe livre, treine quantas vezes quizer
+                durante o horário de funcionamento
+            </h6>
+            <hr />
+            <div class="new-home-preco">
+                <sub class="symbol">R$</sub>
+                <span class="whole">99</span>
+                <div class="container-sup">
+                    <sup class="fraction">,90</sup>
+                    <span class="period">/mês</span>
+                </div>
+            </div>
+            <h6>
+                Matricula R$30,00
+            </h6>
+            <hr />
+            <a class="new-home-v4-btn new-home-v4-btn--thin new-home-v4-btn--yellow"
+               href="https://wa.me/5516991844434"
+               target="_blank" title="Assine agora">Chame agora</a>
+        </div>
+    </div>
+
+    <div class=" planos-box float-sm-start col-sm-2 col-md-4">
+        <div class="cards">
+            <h1>Recorrente</h1>
+            <h6 class="passe-livre">
+                Passe livre, treine quantas vezes quizer
+                durante o horário de funcionamento
+            </h6>
+            <hr />
+            <div class="new-home-preco">
+                <sub class="symbol">R$</sub>
+                <span class="whole">95</span>
+                <div class="container-sup">
+                    <sup class="fraction">,90</sup>
+                    <span class="period">/mês</span>
+                </div>
+            </div>
+            <h6>
+                Matricula R$90,00
+            </h6>
+            <hr />
+            <a class="new-home-v4-btn new-home-v4-btn--thin new-home-v4-btn--yellow"
+               href="https://wa.me/5516991844434"
+               target="_blank" title="Assine agora">Chame agora</a>
+        </div>
+    </div>
+    <div class="box-informacao">
+        <h2>Informações para o aluno</h2>
+    </div>
 </div>
+
+
