--- a/AcademiaCorpus/Views/Shared/_Footer.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Footer.cshtml
@@ -1,9 +1,9 @@
 ﻿<footer>
-    <div class="logo-footer bg-dark">
+    <div class="logo-footer bg-black">
         <a href="https://www.instagram.com/academiacorpusfranca/" target="_blank"><img src="~/imagens/Logo.png" /></a>
     </div>
     <!-- Grid container -->
-    <div class=" bg-dark">
+    <div class=" bg-black">
         <!-- Section: Social media -->
         <!-- Instagram -->
 
@@ -31,7 +31,7 @@
     </div>
     <!-- Grid container -->
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-0">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-black border-bottom box-shadow mb-0">
 
         <div class="col-10 col-md-5 col-lg-5 offset-1" style="color: white">
             <h4> &copy; 2022 - Academia Corpus Franca</h4>
