--- a/AcademiaCorpus/Views/Home/Planos.cshtml
+++ b/AcademiaCorpus/Views/Home/Planos.cshtml
@@ -98,9 +98,8 @@
     </div>
 
     <div id="box-hide">
-        <h4>
-            No plano <strong>mensal</strong> você paga a matricula no valor de
-            R$30,00 e R$109,90 a vista e treina um mês voltando a pagar no vencimento.
+        <h4 style="color:transparent;">
+            passe o mouse para ver mais informações
         </h4>
     </div>
 
@@ -120,7 +119,7 @@
         <h4>
             No plano <strong>recorrente</strong> você paga uma matricula no valor de R$90,00
             cadastra seu cartão nos informando a data de
-            fechamento do fatura para que a primeira mensalidade venha com o mês vencido
+            fechamento da fatura para que a primeira mensalidade venha com o mês vencido
         </h4>
     </div>
 
@@ -132,33 +131,51 @@
 
     // controle box-informacao hide show
     function mostrarDiv1() {
+        document.getElementById('box-hide').style.display = 'none';
         document.getElementById('box-informacao').style.display = 'block';
+
+        if (window.screen.width <= 500) {
+            window.location.href = '#box-informacao';
+        }
+
     }
 
     function esconderDiv1() {
         document.getElementById('box-informacao').style.display = 'none';
+        document.getElementById('box-hide').style.display = 'block';
 
     }
 
     // controle box-informacao2 hide show
     function mostrarDiv2() {
+        document.getElementById('box-hide').style.display = 'none';
         document.getElementById('box-informacao2').style.display = 'block';
+        if (window.screen.width <= 500) {
+            window.location.href = '#box-informacao2';
+        }
+
     }
 
     function esconderDiv2() {
-        ;
+
         document.getElementById('box-informacao2').style.display = 'none'
+        document.getElementById('box-hide').style.display = 'block';
 
     }
 
     // controle box-informacao3 hide show
     function mostrarDiv3() {
+        document.getElementById('box-hide').style.display = 'none';
         document.getElementById('box-informacao3').style.display = 'block';
+        if (window.screen.width <= 500) {
+            window.location.href = '#box-informacao3';
+        }
+
     }
 
     function esconderDiv3() {
         document.getElementById('box-informacao3').style.display = 'none';
-
+        document.getElementById('box-hide').style.display = 'block';
     }
 
 </script>
