ajuste plano recorrente

--- a/AcademiaCorpus/Views/Home/Planos.cshtml
+++ b/AcademiaCorpus/Views/Home/Planos.cshtml
@@ -106,20 +106,24 @@
     <div id="box-informacao" style='display: none;'>
         <h4>
             No plano <strong>mensal</strong> você paga a matricula no valor de
-            R$30,00 e R$109,90 a vista e treina um mês voltando a pagar no vencimento.
+            R$30,00 reais e R$109,90 reais a vista e treina um mês voltando a pagar no próximo vencimento.
         </h4>
     </div>
     <div id="box-informacao2" style='display: none;'>
         <h4>
-            No plano <strong>semestra</strong> você paga a matricula de R$30,00 a vista e o valor de R$599,40
-            dividido em 6 vezes de R$99,90
+            No plano <strong>semestra</strong> você paga a matricula de R$30,00 reais a vista e o valor de R$599,40
+            reais dividido em 6 vezes de R$99,90 no cartão de credito.
         </h4>
     </div>
     <div id="box-informacao3" style='display: none;'>
         <h4>
-            No plano <strong>recorrente</strong> você paga uma matricula no valor de R$90,00
-            cadastra seu cartão nos informando a data de
-            fechamento da fatura para que a primeira mensalidade venha com o mês vencido
+            No plano <strong>recorrente</strong> você paga uma matricula no valor de R$90,00 reais,
+            cadastra seu cartão e nos informando a data de
+            fechamento da fatura para que a primeira mensalidade venha com o mês vencido.
+            <br />
+            Neste plano o limite do cartão não é afetado, Assim, é possível ao aluno continuar
+            comprando normalmente e ainda pagar a mensalidade da <strong>academia</strong>.
+
         </h4>
     </div>
 
