--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -28,10 +28,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                            <a class="nav-link text-white @(ViewBag.OpcaoMenu == 1 ? "active" : "") " asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">PLANOS</a>
+                            <a class=" nav-link text-white @(ViewBag.OpcaoMenu == 2 ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Planos">PLANOS</a>
                         </li>
                         <li class="nav-item">
                             <a class=" nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">AGENDE SEU HORÁRIO </a>
