Criado fale conosco

--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -4,9 +4,16 @@
 <div class="bg-image ">
     <img src="~/imagens/gym_header.jpg">
 </div>
+<div class="melhor-academia">
+    <h1>Venha para a melhor academia de franca!</h1>
+</div>
+
+<div class="linha-divisor">
+    <hr width="50%" align="center" color="#ef8f22">
+</div>
 
 <div class="bnt-aula-teste">
-    <a href="https://wa.me/5516991844434" target="_blank" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Quero fazer uma aula teste!</a>
+    <a href=" https://ig.me/m/academiacorpusfranca/" target="_blank" class="btn btn-success btn-lg" role="button" aria-pressed="true">Quero fazer uma aula teste!</a>
 </div>
 
 <div class="corpo clearfix">
