--- a/AcademiaCorpus/Views/Home/Planos.cshtml
+++ b/AcademiaCorpus/Views/Home/Planos.cshtml
@@ -39,7 +39,7 @@
                 </h6>
                 <hr />
                 <a class="new-home-v4-btn new-home-v4-btn--thin new-home-v4-btn--yellow"
-                   href="https://wa.me/5516991844434"
+                   href="https://ig.me/m/academiacorpusfranca/"
                    target="_blank" title="Assine agora">Chame agora</a>
             </div>
         </div>
@@ -66,7 +66,7 @@
             </h6>
             <hr />
             <a class="new-home-v4-btn new-home-v4-btn--thin new-home-v4-btn--yellow"
-               href="https://wa.me/5516991844434"
+               href="https://ig.me/m/academiacorpusfranca/"
                target="_blank" title="Assine agora">Chame agora</a>
         </div>
     </div>
@@ -92,7 +92,7 @@
             </h6>
             <hr />
             <a class="new-home-v4-btn new-home-v4-btn--thin new-home-v4-btn--yellow"
-               href="https://wa.me/5516991844434"
+               href="https://ig.me/m/academiacorpusfranca/"
                target="_blank" title="Assine agora">Chame agora</a>
         </div>
     </div>
@@ -104,7 +104,7 @@
     </div>
 
     <div id="box-informacao" style='display: none;'>
-        <h4 >
+        <h4>
             No plano <strong>mensal</strong> você paga a matricula no valor de
             R$30,00 reais e R$109,90 reais a vista e treina um mês voltando a pagar no próximo vencimento.
         </h4>
