--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class=" nav-link text-white @(ViewBag.OpcaoMenu == 2 ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Planos">PLANOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" nav-link text-white" asp-area="" asp-controller="Home" asp-action="Planos">AGENDE SEU HORÁRIO </a>
+                            <a class=" nav-link text-white @(ViewBag.OpcaoMenu == 3 ? "active" : "")" asp-area="" asp-controller="Home" asp-action="FaleConosco">Fale Conosco</a>
                         </li>
                     </ul>
                 </div>
