--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -93,5 +93,26 @@
     </div>
     @*ícones fim -----------------------------------------------*@
 
+</div>
 
+
+
+
+<div class="image-black">
+    <div class="img-baner">
+        <img src="~/imagens/banerSite.jpg">
+    </div>
+</div>
+
+
+<div class="video">
+    <div>
+        <h3>Seja a melhor versão de você!</h3>
+    </div>
+
+    <div>
+        <video width="350" controls muted>
+            <source src="~/imagens/videos/POSTAGEM INSTAGRAN AGOSTO 22.mp4" type="video/mp4">
+        </video>
+    </div>
 </div>
