--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+
 <div class="bg-image ">
     <img src="~/imagens/gym_header.jpg">
 </div>
@@ -111,7 +112,7 @@
     </div>
 
     <div>
-        <video width="350" controls muted>
+        <video width="350" controls autoplay muted loop>
             <source src="~/imagens/videos/POSTAGEM INSTAGRAN AGOSTO 22.mp4" type="video/mp4">
         </video>
     </div>
