--- a/AcademiaCorpus/wwwroot/css/site.css
+++ b/AcademiaCorpus/wwwroot/css/site.css
@@ -55,7 +55,9 @@ footer {
     margin: 25px;
 }
 
+
 .bg-image {
+    background-color: black;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -67,11 +69,15 @@ footer {
         padding-top: 93px;
         background-color: white;
         background-repeat: no-repeat;
-        filter: brightness(90%);
-        width: 100%;
         max-height: 500px;
         flex-wrap: wrap;
         justify-content: center;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 850px;
     }
 
 .melhor-academia {
