Resolvendo bug no menu hamburger

--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="image-Baner">
     <div class="bg-image ">
         <picture>
-            <source media="(max-width:480px)" srcset="~/imagens/StartYourVertical.jpg">
+            <source class="source-vertical" media="(max-width:480px)" srcset="~/imagens/StartYourVertical.jpg">
             <source media="(max-width:768px)" srcset="~/imagens/StartYour.jpg">
             <img src="~/imagens/StartYour.jpg">
         </picture>
@@ -114,11 +114,11 @@
     </div>
 </div>
 
-
+<div class="melhor-versao">
+    <h1>Seja a melhor versão de você!</h1>
+</div>
 <div class="video">
-    <div>
-        <h3>Seja a melhor versão de você!</h3>
-    </div>
+
 
     <div>
         <video width="350" controls autoplay muted loop>
