--- a/AcademiaCorpus/Views/Home/Planos.cshtml
+++ b/AcademiaCorpus/Views/Home/Planos.cshtml
@@ -13,6 +13,14 @@
 </div>
 
 
+<!-- aparecer no mobile -->
+<div class="mobile">
+    <div class="desktop-hide">
+        <h6 class="logomobile">
+            Clique para mais informações!
+        </h6>
+    </div>
+</div>
 
 <div class="planos-cards">
     <div class=" planos-box float-sm-start col-sm-2 col-md-4">
@@ -183,6 +191,6 @@
 </script>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
+@*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
+@*<script src="~/js/site.js" asp-append-version="true"></script>*@
 
