--- a/AcademiaCorpus/wwwroot/css/site.css
+++ b/AcademiaCorpus/wwwroot/css/site.css
@@ -69,7 +69,6 @@ footer {
         padding-top: 93px;
         background-color: white;
         background-repeat: no-repeat;
-        max-height: 500px;
         flex-wrap: wrap;
         justify-content: center;
         display: flex;
@@ -77,8 +76,12 @@ footer {
         text-align: center;
         margin: 0 auto;
         width: 100%;
+        max-height: 735px;
         max-width: 850px;
     }
+
+
+
 
 .melhor-academia {
     color: red;
@@ -87,6 +90,12 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 3.6rem;
+    line-height: 1.1;
+    margin-bottom: 1.4rem;
+    letter-spacing: -.03em;
 }
 
 .linha-divisor {
@@ -298,16 +307,27 @@ footer {
 
 
 
-    .video h3 {
-        color: red;
-        padding-bottom: 20px;
-    }
+.melhor-versao {
+    padding-top: 50px;
+    color: red;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 4.6rem;
+    line-height: 1.1;
+    margin-bottom: 1.4rem;
+    letter-spacing: -.03em;
+}
 
 .video {
     width: 90%;
 }
 /*--------------Planos-------------------*/
 .planos {
+    text-transform: uppercase;
     color: black;
     padding-top: 150px;
     padding-bottom: 20px;
@@ -318,16 +338,50 @@ footer {
 }
 
 .acelerar-resultados {
+    text-transform: uppercase;
     color: black;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+    font-weight: 500;
+    font-size: 3.6rem;
+    line-height: 1.1;
+    margin-bottom: 1.4rem;
+}
+
+@media only screen and (max-width: 400px) {
+    .mobile-hide {
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .mobile {
+        display: inline !important;
+    }
+}
+
+@media only screen and (min-width: 500px) {
+    .desktop-hide {
+        display: none !important;
+    }
+}
+
+.logomobile {
+    text-transform: uppercase;
+    color: black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    line-height: 1.1;
+    margin-bottom: 1.4rem;
 }
 
 .planos-box {
     color: white;
-    padding-top: 100px;
+    padding-top: 40px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
